--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 affine==2.2.2
 amqp==2.4.1
+api2pdf==0.0.11
 asn1crypto==0.24.0
 attrs==18.2.0
 autopep8==1.4.3
 billiard==3.5.0.5
+blinker==1.4
 boto==2.49.0
 boto3==1.9.80
 botocore==1.12.80
@@ -23,14 +25,19 @@ cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 descartes==1.1.0
+dnspython==1.16.0
 docutils==0.14
+eventlet==0.24.1
 Fiona==1.8.4
 Flask==1.0.2
 Flask-Redis==0.3.0
 Flask-SQLAlchemy==2.3.2
+Flask-WkHTMLtoPDF==0.1.0
 geographiclib==1.49
 geopandas==0.4.0
 geopy==1.18.1
+gevent==1.4.0
+greenlet==0.4.15
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
@@ -46,6 +53,9 @@ lxml==4.3.0
 MarkupSafe==1.1.0
 matplotlib==3.0.2
 mercantile==1.0.4
+mkl-fft==1.0.10
+mkl-random==1.0.2
+monotonic==1.5
 mpld3==0.3
 munch==2.3.2
 mysql-connector-python==8.0.15
@@ -75,6 +85,7 @@ PySAL==1.14.4.post1
 pyshp==2.0.1
 PySocks==1.6.8
 python-dateutil==2.7.5
+python-dotenv==0.10.1
 pytz==2018.7
 rasterio==1.0.13
 redis==3.1.0
@@ -87,15 +98,19 @@ scipy==1.1.0
 seaborn==0.9.0
 Shapely==1.6.4.post2
 six==1.12.0
+sklearn==0.0
 snuggs==1.4.1
 SQLAlchemy==1.2.15
 statsmodels==0.9.0
+threaded==4.0.1
 tinycss2==0.6.1
 tornado==5.1.1
 traitlets==4.3.2
+typing==3.6.6
 urllib3==1.24.1
 uszipcode==0.2.2
 vine==1.2.0
+WeasyPrint==44
 webencodings==0.5.1
 Werkzeug==0.14.1
 win-inet-pton==1.0.1
